# crypto-mind-sim

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml
backend/api/: ai_routes.py  market_routes.py  strategy_routes.py  user_routes.py
backend/core/: config.py  database.py  main.py  models.py  security.py  trade_utils.py  trading_pairs.py
backend/engine/: __init__.py  engine.py  strategy_executor.py
backend/services/: ai_scheduler.py  ai_service.py  prompt_revision_service.py
backend/tests/: test_ai.py  test_delete_user.py  test_strategy_prompt_optimization.py
backend/utils/: init_prompts.py  reset_db.py
config/: .env.example  requirements.txt
deployment/: Dockerfile  clear_and_reset.bat  docker-compose.prod.yml  docker-compose.yml  init.sql  run.bat  run.sh  start.bat
docs/: AI_GUIDE.md  CHANGELOG.md  DEPLOYMENT.md  STRATEGY_GUIDE.md
frontend/static/: README.md  i18n.js  index.html  index.html.backup
frontend/static/css/: styles.css
frontend/static/js/: auth.js  chart.js  data.js  global.js  init.js  modals.js  public.js  settings.js  strategy.js  theme.js  toast.js  trading.js
migrations/alembic/: env.py
migrations/alembic/versions/: 0001_init_schema.py  0002_add_user_ai_model.py  0003_add_tradetype_hold_error.py
migrations/sql/: V1__init_schema.sql  V2__trade_detail_fields.sql
