[project]
name = "crypto-mind-sim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "sqlalchemy==2.0.36",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "python-dotenv==1.0.1",
    "ccxt==4.4.32",
    "apscheduler==3.10.4",
    "python-multipart==0.0.20",
    "httpx==0.27.0",
    "psycopg[binary]>=3.1",
]
